--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.32.3",
     "@convex-dev/auth": "^0.0.80",
+    "@convex-dev/crons": "^0.1.9",
+    "@convex-dev/resend": "^0.1.9",
+    "@emailjs/browser": "^4.4.1",
+    "@sendgrid/mail": "^8.1.5",
     "clsx": "^2.1.1",
     "convex": "^1.24.2",
     "lucide-react": "^0.525.0",
+    "next": "^15.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.3",
+    "resend": "^4.7.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0",
     "xlsx": "^0.18.5"
